--- a/index.html
+++ b/index.html
@@ -5,18 +5,33 @@
     <meta charset="UTF-8">
     <title>Amoung Us</title>
     <link rel="stylesheet" href="./css/css.css">
+    <link rel="stylesheet" href="./css/char.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
+    <div class="myNavbar">
+        <a href="" class="navtext">aaa</a>
+    </div>
     <div class="space" style="height: 30%;"></div>
     <div class="background">
+    <h1 class="victory">Amizade</h1>
         <div class="crew">
-            <img src="./img/brown.png" width="20%">
-            <img src="./img/brown.png" width="20%">
-            <img src="./img/brown.png" width="20%">
-            <img src="./img/brown.png" width="20%">
-            <img src="./img/brown.png" width="20%">
+            <img class="brown" src="./img/brown.png" width="10%">
+            <img class="red" src="./img/red.png" width="10%">
+            <img class="yellow" src="./img/yellow.png" width="10%">
+            <img class="green" src="./img/green.png" width="10%">
+            <img class="lime" src="./img/lime.png" width="10%">
+            <img class="pink" src="./img/pink.png" width="10%">
+            <img class="white" src="./img/white.png" width="10%">
+            <img class="purple" src="./img/purple.png" width="10%">
         </div>
+    </div>
+    <div class="space" style="height: 30%;"></div>
+    <div>
+
     </div>
 </body>
 
