--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 </head>
 
 <body>
-    <div class="myNavbar">
-        <a href="" class="navtext">aaa</a>
-    </div>
+    <div class="topnav">
+        <a class="active" href="#home">a</a>
+        <a href="#news">a</a>
+        <a href="#contact">a</a>
+        <a href="#about">a</a>
+      </div>
+
     <div class="space" style="height: 30%;"></div>
     <div class="background">
     <h1 class="victory">Amizade</h1>
@@ -30,6 +34,7 @@
         </div>
     </div>
     <div class="space" style="height: 30%;"></div>
+    <h1 style="color: aliceblue;">amigo1</h1>
     <div>
 
     </div>
