--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <img class="pink" src="./img/pink.png" width="10%">
             <img class="white" src="./img/white.png" width="10%">
             <img class="purple" src="./img/purple.png" width="10%">
+            <img class="black" src="./img/black.png" width="10%">
         </div>
     </div>
     <div class="space" style="height: 30%;"></div>
